--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
+        "cron": "^3.2.1",
         "discord.js": "^14.16.3",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
